# metadata-demo

./: .prettierignore  Anchor.toml  package.json  tsconfig.json
app/: client.ts
programs/metadata-demo/: Cargo.toml
programs/metadata-demo/src/: error.rs  lib.rs  state.rs  utils.rs
tests/: metadata-demo.ts
